2009-04-24  Fumitoshi Ukai  <ukai@google.com>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=25257
        Use null for unspecified event listener attributes of XMLHttpRequest
        and XMLHttpRequestUpload in v8 binding.

        cf. http://www.whatwg.org/specs/web-apps/current-work/#event-handler-attributes
        An event handler attribute, unless otherwise specified, can either
        have the value null or be set to a Function object.
        Initially, an event handler attribute must be set to null.

        Test: fast/xmlhttprequest/xmlhttprequest-default-attributes.html

        * bindings/v8/custom/V8XMLHttpRequestCustom.cpp:
        (WebCore::ACCESSOR_GETTER): Changed to use v8::Null().
        * bindings/v8/custom/V8XMLHttpRequestUploadCustom.cpp:
        (WebCore::ACCESSOR_GETTER): Ditto.

2009-04-24  Darin Adler  <darin@apple.com>

        Reviewed by Adam Roben.

        <rdar://problem/6663836> CrashTracer: crashes in Safari at com.apple.WebCore • WebCore::reportException + 1513

        * bindings/js/JSDOMBinding.cpp:
        (WebCore::reportException): Added a null check.

2009-04-24  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Darin Adler
        
        https://bugs.webkit.org/show_bug.cgi?id=23219

        Add support for transtions and animations of background-position, -webkit-background-size,
        -webkit-mask-position and -webkit-mask-size.

        Tests: transitions/background-transitions.html
               transitions/mask-transitions.html

        * page/animation/AnimationBase.cpp:
        (WebCore::blendFunc):
        Add a blend func for LengthSize.
        
        (WebCore::ensurePropertyMap):
        Add wrappers for the new properties.
        
        (WebCore::addShorthandProperties):
        Add a shorthand property for CSSPropertyBackgroundPosition to map to
        CSSPropertyBackgroundPositionX and CSSPropertyBackgroundPositionY, 